Assignment 4 - header nav styling rules are added to the media querry with max-width at 768px.

--- a/style.css
+++ b/style.css
@@ -188,6 +188,12 @@ footer a{
   #featured li {
     width: 46%;
   }
+
+  header nav {
+    float: none;
+    clear: left;
+    width: 100%;
+  }
 }
 /* Mobile */
 @media screen and (max-width: 480px) {
