Assignment 4 - Unordered list rule added inside the footer

--- a/style.css
+++ b/style.css
@@ -211,6 +211,11 @@ footer a{
     padding: 0;
     text-align: center;
   }
+
+  footer ul {
+    width: 48%;
+    text-align: center;
+  }
 }
 /* Mobile */
 @media screen and (max-width: 480px) {
