--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ footer a{
 /* Mobile */
 @media screen and (max-width: 480px) {
   #featured li {
-    width: 92%;
+    width: 90%;
+    margin: 20px 5%;
   }
 }
