Assignment 5 - Styling added to #home menu li

--- a/style.css
+++ b/style.css
@@ -228,4 +228,10 @@ footer a{
     width: 98%;
     text-align: center;
   }
+
+  #home menu li {
+    float: none;
+    width: 96%;
+    margin: 30px 2% !important;
+  }
 }
