--- a/style.css
+++ b/style.css
@@ -240,4 +240,13 @@ footer a{
     width: 100%;
     left: -40%;
   }
+
+  .burger-nav {
+    display: block;
+    height: 40px;
+    width: 100%;
+    background: url(images/hamburger.png) no-repeat 98% center;
+    background-color: #404040;
+    cursor: pointer;
+  }
 }
