Assignment 6 - Width and padding rules were set for header .wrapper

--- a/style.css
+++ b/style.css
@@ -249,4 +249,9 @@ footer a{
     background-color: #404040;
     cursor: pointer;
   }
+
+  header .wrapper {
+    width: 100%;
+    padding: 0;
+  }
 }
