--- a/style.css
+++ b/style.css
@@ -259,4 +259,23 @@ footer a{
     background: #505050;
     height: 0;
   }
+
+  header nav ul.open {
+    height: auto;
+  }
+
+  header nav ul li {
+    float: none;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+  }
+
+  header nav ul li a {
+    color: #fff;
+    padding: 10px;
+    border-bottom: 1px solid #404040;
+    display: block;
+    margin: 0;
+  }
 }
